<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormularioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/valtituloformulario"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valpregunta1"
                android:textSize="19sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/cbdisminucion"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/valcbdisminucion"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/cbtos"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/valcbtos"
                tools:ignore="TouchTargetSizeCheck"/>

            <CheckBox
                android:id="@+id/cbdolorgarganta"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/valcbdolorgarganta"
                tools:ignore="TouchTargetSizeCheck"/>

            <CheckBox
                android:id="@+id/cbcongestionnasal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/valcbcongestionnasal"
                tools:ignore="TouchTargetSizeCheck"/>

            <CheckBox
                android:id="@+id/cbfiebre"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/valcbfiebre"
                tools:ignore="TouchTargetSizeCheck"/>

            <CheckBox
                android:id="@+id/cbninguno"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/valcbninguno"
                tools:ignore="TouchTargetSizeCheck"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/valpregunta2"
                android:textSize="19sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/rgfiebre"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbfiebresi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valrbsi"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/rbfiebreno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valrbno"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/valpregunta3"
                android:textSize="19sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/rgvivessolocasa"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbvivessolosi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valrbsi"
                    tools:ignore="TouchTargetSizeCheck"/>

                <RadioButton
                    android:id="@+id/rbvivessolono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valrbno"
                    tools:ignore="TouchTargetSizeCheck"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/valpregunta4"
                android:textSize="19sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/rgvivesadultomayorcasa"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbadultomayorsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valrbsi"
                    tools:ignore="TouchTargetSizeCheck"/>

                <RadioButton
                    android:id="@+id/rbadultomayorno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valrbno"
                    tools:ignore="TouchTargetSizeCheck"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/valpregunta5"
                android:textSize="19sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/cbluz"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/valcbluz"
                tools:ignore="TouchTargetSizeCheck"/>

            <CheckBox
                android:id="@+id/cbagua"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/valcbagua"
                tools:ignore="TouchTargetSizeCheck"/>

            <CheckBox
                android:id="@+id/cbinternet"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/valcbinternet"
                tools:ignore="TouchTargetSizeCheck"/>

            <CheckBox
                android:id="@+id/cbcable"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/valcbcable"
                tools:ignore="TouchTargetSizeCheck"/>

            <Button
                android:id="@+id/btnresolver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valbtnresolver" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>